<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context="com.example.catbreedsquizgame.QuizActivity">

    <TextView
        android:id="@+id/textView_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_correct"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_empty"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_question"
        app:layout_constraintEnd_toStartOf="@+id/textView_wrong"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_correct"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/text_wrong"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="29dp"
        android:text="@string/text_q"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_empty" />

    <ImageView
        android:id="@+id/imageView_cat"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="48dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_question"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageBtn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_cat">

        <Button
            android:id="@+id/btn_a"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:textColor="@color/btn_text"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btn_b"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:textColor="@color/btn_text"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btn_c"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:textColor="@color/btn_text"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btn_d"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:textColor="@color/btn_text"
            android:textSize="26sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageBtn_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="85dp"
        android:background="@color/app_bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />

</androidx.constraintlayout.widget.ConstraintLayout>